--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,35 @@ jobs:
         with:
           # https://github.com/golangci/golangci-lint/releases/tag/v1.45.2
           version: v1.45.2
+
+  docker:
+    name: Docker
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Docker login
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker build and push
+        run: |
+          image_name=ghcr.io/joshdk/drone-github-comment
+          image_label="pr$(echo "$GITHUB_REF" | cut -d/ -f3)"
+
+          docker build \
+            --build-arg CREATED="$(date -u +'%Y-%m-%dT%H:%M:%SZ')" \
+            --build-arg REVISION="$(git rev-parse HEAD)" \
+            --build-arg VERSION="$image_label" \
+            --tag "$image_name:$image_label" \
+            .
+
+          docker push "$image_name:$image_label"
